--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ input, select {
   position: absolute;
   right: 0;
   bottom: 0;
-  height: 60px;
+  height: 30px;
   width: 50%;
   font-size: 14px;
   line-height: 1;
@@ -171,7 +171,7 @@ input, select {
 }
 
 .title-left p {
-  
+  padding: 10px 0;
 }
 
 .title-right {
