--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,7 @@ input, select {
 
 .second-line {
   align-items: center;
+  transform: translateY(-25%);
 }
 
 .title-right {
@@ -184,11 +185,172 @@ input, select {
   background: #000;
   font-size: 16px;
   color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .title-right p {
   text-align: center;
-  align-items: center;
+}
+
+#mission {
+  height: 350px;
+  background: #000;
+  position: relative;
+}
+
+#mission img {
+  position: absolute;
+  width: 30%;
+  height: 80%;
+  top: 30%;
+  right: 10%;
+  transform: translate(-50,-50);
+}
+
+.mission-wrap {
+  position: absolute;
+  top: 10%;
+  left: 15%;
+  transform: translate(-50,-50);
+}
+
+#mission p {
+  color: #fff;
+  width: 64%;
+}
+
+#mission .first-line {
+  font-size: 30px;
+  font-weight: bold;
+  padding: 50px 0;
+}
+
+#mission .second-line {
+  padding-bottom: 10px;
+}
+
+#mission button {
+  padding: 10px 30px;
+}
+
+.blank {
+  height: 100px;
+  background: #fff;
+}
+
+#service {
+  height: 1200px;
+  background: #cccccc;
+  position: relative;
+}
+
+#service .section-title {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  color: #000;
+  padding: 40px 0;
+  margin: 0;
+}
+
+.img-first {
+  position: absolute;
+  width: 50%;
+  height: 40%;
+  top: 7%;
+  right: 0%;
+  transform: translate(-50,-50);
+}
+
+.img-second {
+  position: absolute;
+  width: 50%;
+  height: 30%;
+  top: 59%;
+  left: 0%;
+  transform: translate(-50,-50);
+}
+
+.service-cat {
+  position: absolute;
+  width: 30%;
+  height: 15%;
+  background: #fff;
+  padding: 50px 50px 30px;
+  top: 15%;
+  left: 25%;
+  transform: translate(-50,-50);
+}
+
+.service-cat2 {
+  position: absolute;
+  width: 30%;
+  height: 15%;
+  background: #fff;
+  padding: 50px 50px 30px;
+  top: 65%;
+  right: 20%;
+  transform: translate(-50,-50);
+}
+
+.service-cat p {
+  font-size: 12px;
+  line-height: 20px;
+}
+
+#service .first-line,
+.service-cat h3 {
+  padding-bottom: 20px;
+}
+
+#service .second-line {
+  padding-bottom: 0;
+}
+
+button {
+  position: absolute;
+  top: 60%;
+  right: 10%;
+  padding: 5px 30px;
+  background: #fff;
+}
+
+#about {
+  height: 600px;
+  background: #fff;
+  position: relative;
+}
+
+
+
+.company {
+  position: absolute;
+  width: 48%;
+  height: 35%;
+  top: 15%;
+  left: 0%;
+  transform: translate(-50,-50);
+}
+
+.recruit {
+  position: absolute;
+  width: 48%;
+  height: 35%;
+  top: 15%;
+  right: 0%;
+  transform: translate(-50,-50);
+}
+
+.FAQ {
+  background: #000;
+  position: absolute;
+  width: 80%;
+  height: 20%;
+  top: 65%;
+  right: 10%;
+  transform: translate(-50,-50);
 }
 
 
@@ -232,3 +394,4 @@ input, select {
   font-size: 14px;
   color: #fff;
 }
+
