--- a/css/style.css
+++ b/css/style.css
@@ -142,8 +142,8 @@ input, select {
 #eyecatch > p {
   position: absolute;
   top: 60%;
-  left: 10%;
-  transform: translate(-50,-50);
+  left: 25%;
+  transform: translate(-50%,-50%);
   font-size: 40px;
   font-style: italic;
   font-weight: bold;
@@ -195,44 +195,51 @@ input, select {
 }
 
 #mission {
-  height: 350px;
+  height: 400px;
   background: #000;
   position: relative;
 }
 
 #mission img {
   position: absolute;
-  width: 30%;
+  width: 40%;
   height: 80%;
-  top: 30%;
-  right: 10%;
-  transform: translate(-50,-50);
+  top: 70%;
+  left: 75%;
+  transform: translate(-50%,-50%);
 }
 
 .mission-wrap {
   position: absolute;
-  top: 10%;
-  left: 15%;
-  transform: translate(-50,-50);
+  top: 50%;
+  left: 45%;
+  transform: translate(-50%,-50%);
 }
 
 #mission p {
   color: #fff;
-  width: 64%;
+  width: 99%;
 }
 
 #mission .first-line {
-  font-size: 30px;
+  font-size: 25px;
   font-weight: bold;
   padding: 50px 0;
 }
 
 #mission .second-line {
+  font-size: 14px;
   padding-bottom: 10px;
+  line-height: 1.5;
 }
 
 #mission button {
+  position: absolute;
+  left: 9%;
+  top: 99%;
+  transform: translate(-50%,-50%);
   padding: 10px 30px;
+  margin-top: 20px;
 }
 
 .blank {
@@ -259,18 +266,18 @@ input, select {
   position: absolute;
   width: 50%;
   height: 40%;
-  top: 7%;
-  right: 0%;
-  transform: translate(-50,-50);
+  top: 27%;
+  left: 75%;
+  transform: translate(-50%,-50%);
 }
 
 .img-second {
   position: absolute;
   width: 50%;
   height: 30%;
-  top: 59%;
-  left: 0%;
-  transform: translate(-50,-50);
+  top: 73%;
+  right: 30%;
+  transform: translate(-50%,-50%);
 }
 
 .service-cat {
@@ -279,9 +286,9 @@ input, select {
   height: 15%;
   background: #fff;
   padding: 50px 50px 30px;
-  top: 15%;
-  left: 25%;
-  transform: translate(-50,-50);
+  top: 28%;
+  left: 40%;
+  transform: translate(-50%,-50%);
 }
 
 .service-cat2 {
@@ -290,9 +297,9 @@ input, select {
   height: 15%;
   background: #fff;
   padding: 50px 50px 30px;
-  top: 65%;
-  right: 20%;
-  transform: translate(-50,-50);
+  top: 75%;
+  left: 55%;
+  transform: translate(-50%,-50%);
 }
 
 .service-cat p {
@@ -328,9 +335,9 @@ button {
   position: absolute;
   width: 48%;
   height: 35%;
-  top: 15%;
-  left: 0%;
-  transform: translate(-50,-50);
+  top: 32.5%;
+  left: 24%;
+  transform: translate(-50%,-50%);
   background: url(../img/company.jpeg) no-repeat;
 }
 
@@ -354,9 +361,9 @@ button {
   position: absolute;
   width: 48%;
   height: 35%;
-  top: 15%;
-  right: 0%;
-  transform: translate(-50,-50);
+  top: 32.5%;
+  left: 76%;
+  transform: translate(-50%,-50%);
   background: url(../img/recruit.jpg) no-repeat;
   background-size: cover;
 }
@@ -366,9 +373,9 @@ button {
   position: absolute;
   width: 80%;
   height: 20%;
-  top: 65%;
-  right: 10%;
-  transform: translate(-50,-50);
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%,-50%);
   display: flex;
 }
 
@@ -414,13 +421,19 @@ button {
 
 #contact button {
   color: #fff;
-  background: rgba(255,255,255,0.3);
-  margin: 50px 530px;
+  background-color: transparent;
+  border: 1px solid #fff;
+  padding: 8px 25px;
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
 
 .footer {
   height: 70px;
   background: #000;
+  position: relative;
 }
 
 .footer-wrap {
@@ -453,10 +466,12 @@ button {
 }
 
 .copyright {
-  display: flex;
-  text-align: center;
-  align-items: flex-end;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
   font-size: 14px;
   color: #fff;
+  padding-bottom: 5px;
 }
 
